--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -10,7 +10,7 @@
 
 本案例设置的商品初始化库存数量为10，调用初始化库存接口后，在全自动测试平台进行性能测试，设置12个并发用户同时发送下单请求（即调用分布式锁接口），此时性能测试报告显示：12个请求中，10个请求输出“调用成功”，2个请求输出“库存不足”，如图2-41所示：
 
-![2-41](https://www.feisuanyz.com/fsimage/alcj-image/redislock/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/177289092-d6503f8f-06c6-462a-b973-21e48d3d2ecf.png)
 
 ##### 图2-41 性能测试报告
 
@@ -18,7 +18,7 @@
 
 a）初始化库存接口
 
-![2-42](https://www.feisuanyz.com/fsimage/alcj-image/redislock/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/177289119-4387569f-d197-4af4-8205-9bcca7598eb7.png)
 
 ##### 图2-42 流程图
 
@@ -26,7 +26,7 @@ a）初始化库存接口
 
 b）初始化库存接口
 
-![2-43](https://www.feisuanyz.com/fsimage/alcj-image/redislock/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/177289149-c88ac059-0550-4b0c-8027-0655b90238e9.png)
 
 ##### 图2-43 流程图
 
@@ -34,7 +34,7 @@ b）初始化库存接口
 
 c）分布式锁接口
 
-![2-44](https://www.feisuanyz.com/fsimage/alcj-image/redislock/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/177289181-32dcf7ca-d407-48ca-98f5-6e4328899067.png)
 
 ##### 图2-44 流程图
 
@@ -42,11 +42,11 @@ c）分布式锁接口
 
 ##### 2.2.2 全自动开发平台操作步骤
 
-##### 前提条件：您需要确保项目中已添加Redis缓存加载项，关于如何加载资源可参见[《SoFlu社区版快速入门教程第4.9节：如何加载资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#49-%E5%A6%82%E4%BD%95%E5%8A%A0%E8%BD%BD%E8%B5%84%E6%BA%90)。
+##### 前提条件：您需要确保项目中已添加Redis缓存加载项，关于如何加载资源可参见[《SoFlu社区版快速入门教程第4.9节：如何加载资源》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#49-%E5%A6%82%E4%BD%95%E5%8A%A0%E8%BD%BD%E8%B5%84%E6%BA%90)。
 
 a）创建Redis缓存资源实例
 
-![2-45](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-1.png)
+![image](https://user-images.githubusercontent.com/79617492/177289316-b136f7de-eb55-44b7-b032-862a198bede1.png)
 
 ##### 图2-45 新增Redis缓存资源实例
 
@@ -54,195 +54,195 @@ b）创建初始化库存接口
 
 b1）进入全自动开发平台“接口管理”功能模块，新增接口模块并新增初始化库存接口，填写接口的基本信息，如图2-46所示：
 
-![2-46](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-2.png)
+![image](https://user-images.githubusercontent.com/79617492/177289339-18300b58-73f1-4330-8d58-6b1b26024a3a.png)
 
 ##### 图2-46 点击“接口管理”
 
-![2-47](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-3.png)
+![image](https://user-images.githubusercontent.com/79617492/177289366-13701cd7-a1c7-4cbb-9be3-fd9b29da6198.png)
 
 ##### 图2-47 填写接口的基本信息
 
-b2）单击“下一步”，该接口不需要配置参数信息，直接提交接口信息，进入模型编辑，如图2-47所示：
+b2）单击“下一步”，该接口不需要配置参数信息，直接提交接口信息，进入模型编辑，如图2-48所示：
 
-![2-47](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-4.png)
+![image](https://user-images.githubusercontent.com/79617492/177289399-11ebfa5d-e815-4949-b8b7-2d81e21fbf77.png)
 
-##### 图2-47 进入模型编辑
+##### 图2-48 进入模型编辑
 
-b3）在窗体视图页面，通过拖拽左侧组件列表中所需的组件进行流程图编辑，如图2-48所示：
+b3）在窗体视图页面，通过拖拽左侧组件列表中所需的组件进行流程图编辑，如图2-49所示：
 
-![2-48](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-5.png)
+![image](https://user-images.githubusercontent.com/79617492/177289430-a16a1b21-7427-4882-9c23-1ea0113925e0.png)
 
-##### 图2-48 进行流程图编辑
+##### 图2-49 进行流程图编辑
 
 c）初始化库存接口中组件的详细配置
 
 c1）在Redis缓存上储存初始化库存量，并设置初始化库存量为10。
 
-使用Redis组件调用Redis方法putBucket(String name, Object value)新增通用对象，用于表示初始化的库存量，传入通用对象名stock以及通用对象参数值10即可，如图2-49、图2-50所示：
+使用Redis组件调用Redis方法putBucket(String name, Object value)新增通用对象，用于表示初始化的库存量，传入通用对象名stock以及通用对象参数值10即可，如图2-50、图2-51所示：
 
-![2-49](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-6.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-50.png)
 
-##### 图2-49 Redis组件【初始化库存数量10】
+##### 图2-50 Redis组件【初始化库存数量10】
 
-![2-50](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-7.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-51.png)
 
-##### 图2-50 组件配置
+##### 图2-51 组件配置
 
-##### 说明：此处用到的Redis方法类型为Bucket，专门用于操作通用对象，putBucket方法说明如图2-51所示：
+##### 说明：此处用到的Redis方法类型为Bucket，专门用于操作通用对象，putBucket方法说明如图2-52所示：
 
-![2-51](https://www.feisuanyz.com/fsimage/alcj-image/redislock/table1.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-52.png)
 
-##### 图2-51 putBucket方法说明
+##### 图2-52 putBucket方法说明
 
-c2）使用Redis组件调用Redis方法getBucket(String name)获取Redis缓存上储存的初始化库存量，传入通用对象名stock即可，如图2-52、图2-53所示：
+c2）使用Redis组件调用Redis方法getBucket(String name)获取Redis缓存上储存的初始化库存量，传入通用对象名stock即可，如图2-53、图2-54所示：
 
-![2-52](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-8.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-53.png)
 
-##### 图2-52 Redis缓存组件【获取初始化库存量】
+##### 图2-53 Redis缓存组件【获取初始化库存量】
 
-![2-53](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-9.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-54.png)
 
-##### 图2-53 组件配置
+##### 图2-54 组件配置
 
-c3）使用输出结果组件输出Redis缓存上储存的初始化库存量，传入Redis组件【获取初始化库存量】的执行结果即可，如图2-54、图2-55所示：
+c3）使用输出结果组件输出Redis缓存上储存的初始化库存量，传入Redis组件【获取初始化库存量】的执行结果即可，如图2-55、图2-56所示：
 
-![2-54](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-10.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-55.png)
 
-##### 图2-54 输出结果【输出初始化库存量】
+##### 图2-55 输出结果【输出初始化库存量】
 
-![2-55](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-11.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-56.png)
 
-##### 图2-55 组件配置
+##### 图2-56 组件配置
 
 d）测试初始化库存接口
 
-d1）流程图设计完成后，保存并退出窗体视图，如图2-56所示：
+d1）流程图设计完成后，保存并退出窗体视图，如图2-57所示：
 
-![2-56](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-12.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-57.png)
 
-##### 图2-56 保存并退出窗体
+##### 图2-57 保存并退出窗体
 
-d2）提交并发布接口，如图2-57所示：
+d2）提交并发布接口，如图2-58所示：
 
-![2-57](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-13.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-58.png)
 
-##### 图2-57 提交并发布接口
+##### 图2-58 提交并发布接口
 
-d3）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图2-58所示：
+d3）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图2-59所示：
 
-![2-58](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-14.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-59.png)
 
-##### 图2-58 使用测试用例
+##### 图2-59 使用测试用例
 
-d4）执行测试用例，如图2-59所示：
+d4）执行测试用例，如图2-60所示：
 
-![2-59](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-15.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-60.png)
 
-##### 图2-59 执行测试用例
+##### 图2-60 执行测试用例
 
-d5）通过测试用例响应内容查看接口的执行结果，data返回10说明此时Redis缓存上储存的库存数量为10，如图2-60所示：
+d5）通过测试用例响应内容查看接口的执行结果，data返回10说明此时Redis缓存上储存的库存数量为10，如图2-61所示：
 
-![2-60](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-16.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-61.png)
 
-##### 图2-60 查看执行结果
+##### 图2-61 查看执行结果
 
 e）创建分布式锁接口
 
-e1）新增分布式锁接口，填写接口的基本信息，如图2-61所示：
+e1）新增分布式锁接口，填写接口的基本信息，如图2-62所示：
 
-![2-61](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-17.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-62.png)
 
-##### 图2-61 填写基本信息
+##### 图2-62 填写基本信息
 
-e2）与初始化库存接口类似，分布式锁接口也不需要配置接口参数，直接进入窗体视图拖拽组件列表中的组件进行流程图的编辑，如图2-62所示：
+e2）与初始化库存接口类似，分布式锁接口也不需要配置接口参数，直接进入窗体视图拖拽组件列表中的组件进行流程图的编辑，如图2-63所示：
 
-![2-62](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-18.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-63.png)
 
-##### 图2-62 进行流程图编辑
+##### 图2-63 进行流程图编辑
 
 f）分布式锁接口中组件的详细配置
 
-f1）使用单函数组件调用函数newMapInit(Object[] keyAndValue)构建分布式锁Map集合，需传入分布式锁参数名lockKey以及分布式锁参数值product_001，如图2-63所示：
+f1）使用单函数组件调用函数newMapInit(Object[] keyAndValue)构建分布式锁Map集合，需传入分布式锁参数名lockKey以及分布式锁参数值product_001，如图2-64所示：
 
-![2-63](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-19.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-64.png)
 
-##### 图2-63 单函数组件【构建分布式锁名】
+##### 图2-64 单函数组件【构建分布式锁名】
 
-![2-64](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-20.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-65.png)
 
-##### 图2-64 组件配置
+##### 图2-65 组件配置
 
-f2）使用Redis组件中调用Redis方法lock(String lockName, long leaseTime, TimeUnit unit)用于上锁并设置超时释放时间，需传入上一步构建的分布式锁Map集合，即单函数组件【构建分布式锁名】的执行结果，以及超时时间数和时间单位，本实例设置的超时释放时间为2秒，如图2-65、图2-66所示：
+f2）使用Redis组件中调用Redis方法lock(String lockName, long leaseTime, TimeUnit unit)用于上锁并设置超时释放时间，需传入上一步构建的分布式锁Map集合，即单函数组件【构建分布式锁名】的执行结果，以及超时时间数和时间单位，本实例设置的超时释放时间为2秒，如图2-66、图2-67所示：
 
-![2-65](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-21.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-66.png)
 
-##### 图2-65 Redis组件【上锁，超时释放】
+##### 图2-66 Redis组件【上锁，超时释放】
 
-![2-66](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-22.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-67.png)
 
-##### 图2-66 组件配置
+##### 图2-67 组件配置
 
-f3）使用Redis组件调用Redis方法getBucket(String name)获取Redis缓存上存储的当前库存量，传入初始化库存接口中创建的通用对象stock即可，如图2-67、图2-68所示：
+f3）使用Redis组件调用Redis方法getBucket(String name)获取Redis缓存上存储的当前库存量，传入初始化库存接口中创建的通用对象stock即可，如图2-68、图2-69所示：
 
-![2-67](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-23.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-68.png)
 
-##### 图2-67 Redis缓存组件【获取当前库存量】
+##### 图2-68 Redis缓存组件【获取当前库存量】
 
-![2-68](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-24.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-69.png)
 
-##### 图2-68 组件配置
+##### 图2-69 组件配置
 
-f4）使用互斥条件组件判断上一步【获取当前库存量】是否小于等于0，若小于等于0，说明库存量不足，则输出库存不足结束流程；若大于0，说明库存量充足，则继续以下流程，如图2-69、图2-70、图2-71、图2-72、图2-73所示：
+f4）使用互斥条件组件判断上一步【获取当前库存量】是否小于等于0，若小于等于0，说明库存量不足，则输出库存不足结束流程；若大于0，说明库存量充足，则继续以下流程，如图2-70、图2-71、图2-72、图2-73、图2-74所示：
 
-![2-69](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-25.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-70.png)
 
-##### 图2-69【是否有库存】流程
+##### 图2-70【是否有库存】流程
 
-![2-70](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-26.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-71.png)
 
-##### 图2-70 小于等于0时流转条件
+##### 图2-71 小于等于0时流转条件
 
-![2-71](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-27.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-72.png)
 
-##### 图2-71 输出结果组件【库存不足】
+##### 图2-72 输出结果组件【库存不足】
 
-![2-72](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-28.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-73.png)
 
-##### 图2-72 输出库存不足信息
+##### 图2-73 输出库存不足信息
 
-![2-73](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-29.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-74.png)
 
-##### 图2-73 大于0时流转条件
+##### 图2-74 大于0时流转条件
 
-f5）使用Redis组件调用Redis方法putBucket(String name, Object value) 将当前库存量减1，并更新Redis缓存上存储的库存量，需传入通用对象名stock以及步骤3中Redis组件【获取当前库存量】的执行结果减1，如图2-74、图2-75所示：
+f5）使用Redis组件调用Redis方法putBucket(String name, Object value) 将当前库存量减1，并更新Redis缓存上存储的库存量，需传入通用对象名stock以及步骤3中Redis组件【获取当前库存量】的执行结果减1，如图2-75、图2-76所示：
 
-![2-74](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-30.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-75.png)
 
-##### 图2-74 Redis组件【更新库存量】
+##### 图2-75 Redis组件【更新库存量】
 
-![2-75](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-31.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-76.png)
 
-##### 图2-75 组件配置
+##### 图2-76 组件配置
 
-f6）使用Redis组件调用Redis方法getBucket(String name)获取更新后的库存量，传入在Redis缓存上储存的库存量值stock即可，如图2-76、图2-77所示：
+f6）使用Redis组件调用Redis方法getBucket(String name)获取更新后的库存量，传入在Redis缓存上储存的库存量值stock即可，如图2-77、图2-78所示：
 
-![2-76](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-32.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-77.png)
 
-##### 图2-76 Redis组件【获取当前库存量】
+##### 图2-77 Redis组件【获取当前库存量】
 
-![2-77](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-33.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-78.png)
 
-##### 图2-77 组件配置
+##### 图2-78 组件配置
 
-f7）使用输出结果组件输出更新后的库存量，传入上一步Redis组件【获取当前库存量】的执行结果即可，如图2-78、图2-79所示：
+f7）使用输出结果组件输出更新后的库存量，传入上一步Redis组件【获取当前库存量】的执行结果即可，如图2-79、图2-80所示：
 
-![2-78](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-34.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-79.png)
 
-##### 图2-78 输出结果【输出现存库存量】
+##### 图2-79 输出结果【输出现存库存量】
 
-![2-79](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-35.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-80.png)
 
-##### 图2-79 输出提示信息
+##### 图2-80 输出提示信息
 
 g）测试分布式锁接口
 
@@ -252,41 +252,41 @@ g2）提交并发布分布式锁接口。
 
 g3）对接口进行测试用例，检验接口实现的功能是否可以达到预期。
 
-g4）编辑测试用例，如图2-80所示：
+g4）编辑测试用例，如图2-81所示：
 
-![2-80](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-36.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-81.png)
 
-##### 图2-80 编辑测试用例
+##### 图2-81 编辑测试用例
 
-g5）启用可视化日志（便于查看接口流程中的数据流转），单击执行即可，如图2-81所示：
+g5）启用可视化日志（便于查看接口流程中的数据流转），单击执行即可，如图2-82所示：
 
-![2-81](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-37.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-82.png)
 
-##### 图2-81 启用可视化日志
+##### 图2-82 启用可视化日志
 
-g6）通过测试用例详情页面的响应内容查看接口的执行结果，若当前库存充足时，返回调用成功以及当前库存数量，如图2-82所示；若当前库存不足，返回库存不足输出结果，如图2-83所示：
+g6）通过测试用例详情页面的响应内容查看接口的执行结果，若当前库存充足时，返回调用成功以及当前库存数量，如图2-83所示；若当前库存不足，返回库存不足输出结果，如图2-84所示：
 
-![2-82](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-38.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-83.png)
 
-##### 图2-82 库存充足的结果
+##### 图2-83 库存充足的结果
 
-![2-83](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-39.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-84.png)
 
-##### 图2-83 库存不足的结果
+##### 图2-84 库存不足的结果
 
-g7）若测试用例的结果出现错误，可通过可视化日志双击查看各个组件的节点数据进行接口的调试，如图2-84所示：
+g7）若测试用例的结果出现错误，可通过可视化日志双击查看各个组件的节点数据进行接口的调试，如图2-85所示：
 
-![2-84](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-40.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-85.png)
 
-##### 图2-84 选择可视化日志
+##### 图2-85 选择可视化日志
 
-![2-85](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-41.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-86.png)
 
-##### 图2-85 查看可视化日志
+##### 图2-86 查看可视化日志
 
-![2-86](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-42.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-87.png)
 
-##### 图2-86 查看节点数据
+##### 图2-87 查看节点数据
 
 ##### 2.2.3 全自动测试平台操作步骤
 
@@ -302,113 +302,113 @@ a2）根据实际情况部署所需资源池并新增对应的资源。
 
 b）关联全自动开发平台的项目和接口
 
-b1）单击全自动测试平台页面上方“测试场景 > 接口管理”选项，选择“关联项目”，如图2-87所示：
+b1）单击全自动测试平台页面上方“测试场景 > 接口管理”选项，选择“关联项目”，如图2-88所示：
 
-![2-87](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-43.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-88.png)
 
-##### 图2-87 选择“关联项目”
+##### 图2-88 选择“关联项目”
 
-b2）查询所需关联项目，单击“关联”即可，如图2-88所示：
+b2）查询所需关联项目，单击“关联”即可，如图2-89所示：
 
 ##### 说明：本实例使用到的项目名称为test2，您在操作时需根据实际需求选择关联。
 
-![2-88](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-44.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-89.png)
 
-##### 图2-88 关联所需项目
+##### 图2-89 关联所需项目
 
-b3）关联成功后，您可以看到对应项目及所有的接口信息显示在接口管理页面，如图2-89所示：
+b3）关联成功后，您可以看到对应项目及所有的接口信息显示在接口管理页面，如图2-90所示：
 
-![2-89](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-45.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-90.png)
 
-##### 图2-89 查看接口信息
+##### 图2-90 查看接口信息
 
-b4）进入初始化库存接口详情页面，选择好环境配置后，单击“测试”即可调用该接口执行初始化库存操作，如图2-90所示：
+b4）进入初始化库存接口详情页面，选择好环境配置后，单击“测试”即可调用该接口执行初始化库存操作，如图2-91所示：
 
 ##### 说明：对初始化库存接口进行测试后，最好单击一下保存，以免下次执行时需重新选择，您也可以在全自动测试平台对该接口执行测试用例以初始化库存。
 
-![2-90](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-46.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-91.png)
 
-##### 图2-90 选择好环境配置
+##### 图2-91 选择好环境配置
 
 c）创建分布式锁测试用例
 
-c1）新增测试用例模块，如图2-91所示：
+c1）新增测试用例模块，如图2-92所示：
 
-![2-91](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-47.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-92.png)
 
-##### 图2-91 新增测试用例模块
+##### 图2-92 新增测试用例模块
 
-c2）在对应的测试用例模块下，新增测试用例，如图2-92所示：
+c2）在对应的测试用例模块下，新增测试用例，如图2-93所示：
 
-![2-92](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-48.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-93.png)
 
-##### 图2-92 新增测试用例
+##### 图2-93 新增测试用例
 
-c3）填写测试用例详细信息，如图2-93所示：
+c3）填写测试用例详细信息，如图2-94所示：
 
-![2-93](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-49.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-94.png)
 
-##### 图2-93 填写测试用例信息
+##### 图2-94 填写测试用例信息
 
-c4）提交测试用例，如图2-94所示：
+c4）提交测试用例，如图2-95所示：
 
-![2-94](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-50.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-95.png)
 
-##### 图2-94 提交测试用例
+##### 图2-95 提交测试用例
 
-c5）评审测试用例，如图2-95所示：
+c5）评审测试用例，如图2-96所示：
 
-![2-95](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-51.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-96.png)
 
-##### 图2-95 评审测试用例
+##### 图2-96 评审测试用例
 
-c6）评审通过后，单击“提交”即可，如图2-96所示：
+c6）评审通过后，单击“提交”即可，如图2-97所示：
 
-![2-96](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-52.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-97.png)
 
-##### 图2-96 通过评审
+##### 图2-97 通过评审
 
 d）新增分布式锁测试场景
 
-d1）新增测试场景，填写基本信息，如图2-97所示：
+d1）新增测试场景，填写基本信息，如图2-98所示：
 
-![2-97](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-53.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-98.png)
 
-##### 图2-97 新增测试场景
+##### 图2-98 新增测试场景
 
-![2-98](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-54.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-99.png)
 
-##### 图2-98 填写基本信息
+##### 图2-99 填写基本信息
 
-d2）在根测试场景下创建场景组，如图2-98所示：
+d2）在根测试场景下创建场景组，如图2-100所示：
 
-![2-98](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-55.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-100.png)
 
-##### 图2-98 创建场景组
+##### 图2-100 创建场景组
 
-d3）为场景组绑定接口，如图2-99所示：
+d3）为场景组绑定接口，如图2-101所示：
 
-![2-99](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-56.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-101.png)
 
-##### 图2-99 绑定接口
+##### 图2-101 绑定接口
 
-d4）选择“分布式锁”接口，如图2-100所示：
+d4）选择“分布式锁”接口，如图2-102所示：
 
-![2-100](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-57.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-102.png)
 
-##### 图2-100 选择“分布式锁”接口
+##### 图2-102 选择“分布式锁”接口
 
 d5）设置断言。
 
 ##### 说明：断言用于设置条件对接口返回的数据进行检查，看是否可以通过设置的条件。断言因接口返回数据类型的不同也分为不同的类型，此处选择的是JSON断言，用于判断分布式锁接口返回的msg字段是否为“调用成功!”。若为“调用成功!”，则说明库存充足，用户请求成功，否则说明库存不足，用户请求失败。
 
-![2-101](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-58.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-103.png)
 
-##### 图2-101 选择JSON断言
+##### 图2-103 选择JSON断言
 
-![2-102](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-59.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-104.png)
 
-##### 图2-102 设置断言
+##### 图2-104 设置断言
 
 d6）单击“保存”，保存测试场景。
 
@@ -416,58 +416,57 @@ d6）单击“保存”，保存测试场景。
 
 e）进行并发性能测试
 
-e1）进入性能测试页面，创建性能测试，如图2-103所示：
+e1）进入性能测试页面，创建性能测试，如图2-105所示：
 
-![2-103](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-60.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-105.png)
 
-##### 图2-103 创建性能测试
+##### 图2-105 创建性能测试
 
-e2）填写性能测试基本信息，选择可用的环境和资源池，导入测试用例，如图2-104所示：
+e2）填写性能测试基本信息，选择可用的环境和资源池，导入测试用例，如图2-106所示：
 
-![2-104](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-61.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-106.png)
 
-##### 图2-104 导入测试用例
+##### 图2-106 导入测试用例
 
-e3）选择创建的分布式锁测试用例，可以看到该测试用例绑定了分布式锁测试场景，如图2-105所示：
+e3）选择创建的分布式锁测试用例，可以看到该测试用例绑定了分布式锁测试场景，如图2-107所示：
 
-![2-105](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-62.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-107.png)
+##### 图2-107 选择创建的用例
 
-##### 图2-105 选择创建的用例
-
-e4）设置并发用户数，并选择按持续时间或循环次数进行测试，如图2-106所示：
+e4）设置并发用户数，并选择按持续时间或循环次数进行测试，如图2-108所示：
 
 ##### 说明：因为本实例设置的初始化库存数量为10，此处我们设置12个并发用户数来展示分布式锁效果，同时设置这12个并发用户分别只执行一次分布式锁测试场景（即循环次数为1次），且这12个并发用户需要在1秒内全部生成（即在1秒内增加并发用户）。
 
-![2-106](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-63.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-108.png)
 
-##### 图2-106 设置参数
+##### 图2-108 设置参数
 
 e5）创建性能测试完成后，单击“保存”。
 
-e6）执行性能测试，如图2-107所示：
+e6）执行性能测试，如图2-109所示：
 
-![2-107](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-64.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-109.png)
 
-##### 图2-107 执行性能测试
+##### 图2-109 执行性能测试
 
 e7）稍等片刻后，查看测试报告。
 
 f）查看分布式锁性能测试报告
 
-f1）选择测试报告，如图2-108所示：
+f1）选择测试报告，如图2-110所示：
 
-![2-108](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-65.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-110.png)
 
-##### 图2-108 选择测试报告
+##### 图2-110 选择测试报告
 
-f2）单击“详情”，如图2-109所示：
+f2）单击“详情”，如图2-111所示：
 
-![2-109](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-66.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-111.png)
 
-##### 图2-109 单击“详情”
+##### 图2-111 单击“详情”
 
-f3）查看测试报告详情，报告详情包含压力配置、测试概览、请求统计、错误记录以及监控详情5个部分的数据信息，我们可以在错误记录部分看到此次并发测试发送了12次请求，其中有两次请求因库存不足请求失败，如图2-110所示：
+f3）查看测试报告详情，报告详情包含压力配置、测试概览、请求统计、错误记录以及监控详情5个部分的数据信息，我们可以在错误记录部分看到此次并发测试发送了12次请求，其中有两次请求因库存不足请求失败，如图2-112所示：
 
-![2-110](https://www.feisuanyz.com/fsimage/alcj-image/redislock/4-67.png)
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-112.png)
 
-##### 图2-110 查看测试报告详情
+##### 图2-112 查看测试报告详情
